examples/kubernetes/prod/ingress.yaml
# Ingress Resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cube-api
spec:
  tls:
  - hosts:
    - your.host.foo.org
    secretName: ingress-nginx-secret
  rules:
  - host: your.host.foo.org
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: cube-api
            port:
              number: 4000
